# pyfet

./: .gitignore  LICENSE  config_example.json  mitmproxy-ca-cert.pem  pyproject.toml  test.txt
pyfet/: cli.py  commands.py  config_example.json
pyfet/headerparser/: grammar_spf.lark  parser.py  utils.py
pyfet/oauth/: IMAP_auth.py  google_oauth.py  login_interface.py  microsoft_oauth.py
pyfet/scanner/: scanner.py
pyfet/sniffer/: sniffer_script.py  utils.py
pyfet/utils/: generics.py  mail.py
tests/: cie.py  pyspf_test.py  test_arc.py  test_auth_result.py  test_cli.py  test_nfc.py  test_operations.py  test_sniff.py  test_sniff2.py  test_sniff3.py
