[tool.poetry]
name = "pyfet"
version = "0.1.0"
description = "Python Forensics Email Tool"
authors = ["William Zeni"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.5"
pyfiglet = "^1.0.2"
requests = "^2.32.3"
lxml = "^5.3.0"
xmltodict = "^0.14.1"
google-auth-oauthlib = "^1.2.1"
google-auth = "^2.35.0"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.149.0"
msal = "^1.31.0"
imapclient = "^3.0.1"
cryptography = "^43.0.1"
pyopenssl = "^24.2.1"
asn1crypto = "^1.5.1"
dnspython = "^2.7.0"
lark = {extras = ["interegular"], version = "^1.2.2"}
regex = "^2024.9.11"
pyspf = "^2.0.14"
python-pkcs11 = "^0.7.0"
nfcpy = "^1.0.4"
dkimpy = "^1.1.8"

[tool.poetry.scripts]
pyfet = "pyfet.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
